# PyBun

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  Makefile  README.md  SECURITY.md  SECURITY.txt  deny.toml  justfile  pyproject.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  publish-pypi.yml  release.yml
Formula/: pybun.rb
backup/: telemetry.rs
bucket/: pybun.json
docs/: BENCHMARK_UV_COMPARISON.md  BENCHPLAN.md  DEMO_GIF_GUIDE.md  PLAN.md  PROMPT.md  PYPI.md  README.md  RELEASE.md  SPECS.md  UPGRADE.md  qiita.md
examples/: PyBun_Quick_Start.ipynb  hello.py
pybun/: __init__.py  bootstrap.py
pybun.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pybun/tests/: test_bootstrap.py
release-metadata/: SHA256SUMS  pybun-provenance.json  pybun-release.json  pybun-sbom.json
release-metadata/artifacts/pybun-aarch64-apple-darwin/: pybun-aarch64-apple-darwin.tar.gz.minisig
release-metadata/artifacts/pybun-aarch64-unknown-linux-gnu/: pybun-aarch64-unknown-linux-gnu.tar.gz.minisig
release-metadata/artifacts/pybun-x86_64-apple-darwin/: pybun-x86_64-apple-darwin.tar.gz.minisig
release-metadata/artifacts/pybun-x86_64-pc-windows-msvc/: pybun-x86_64-pc-windows-msvc.zip.minisig
release-metadata/artifacts/pybun-x86_64-unknown-linux-gnu/: pybun-x86_64-unknown-linux-gnu.tar.gz.minisig
release-metadata/artifacts/pybun-x86_64-unknown-linux-musl/: pybun-x86_64-unknown-linux-musl.tar.gz.minisig
schema/: schema_v1.json
scripts/: dev  install.ps1  install.sh
scripts/benchmark/: README.md  bench.py  config.toml  config_ci.toml  ux_criteria.toml  ux_gate.py
scripts/benchmark/fixtures/: pep723.py
scripts/benchmark/fixtures/large_project/: pyproject.toml
scripts/benchmark/fixtures/medium_project/: pyproject.toml
scripts/benchmark/fixtures/small_project/: pyproject.toml
scripts/benchmark/report/: generate.py
scripts/benchmark/scenarios/: __init__.py  adhoc.py  install.py  lazy_import.py  mcp.py  module_find.py  resolution.py  run.py  test.py  uv_comparison.py
scripts/benchmark/tests/: test_bench.py  test_mcp.py  test_resolution.py  test_run.py  test_test_scenario.py  test_uv_comparison.py  test_ux_gate.py
scripts/release/: generate_manifest.py  generate_package_managers.py  generate_provenance.py  generate_release_notes.py  verify_security_artifacts.py
scripts/release/tests/: test_package_managers.py  test_release_notes.py  test_security_artifacts.py
security/: pybun-release.pub
src/: allocator.rs  audit.rs  build.rs  cache.rs  cli.rs  commands.rs  downloader.rs  drift.rs  entry.rs  env.rs  env_cache.rs  hot_reload.rs  index.rs  installer.rs  lazy_import.rs  lib.rs  lockfile.rs  main.rs  mcp.rs  module_finder.rs  once_map.rs  paths.rs  pep440.rs  pep723.rs  pep723_cache.rs  proc_exec.rs  profiles.rs  progress.rs  project.rs  pypi.rs  release_manifest.rs  resolver.rs  runtime.rs  sandbox.rs  sbom.rs  schema.rs  security.rs  self_heal.rs  self_update.rs  snapshot.rs  (+7 more)
src/commands/: maintenance.rs  mod.rs  test.rs  tooling.rs
src/pybun/mcp/: tools.py
tests/: cli_add_remove.rs  cli_audit.rs  cli_build.rs  cli_init.rs  cli_init_extra.rs  cli_install.rs  cli_lock.rs  cli_outdated.rs  cli_run.rs  cli_run_pep723_native_cp_tag.rs  cli_smoke.rs  cli_upgrade.rs  cli_x.rs  compat_snapshots.rs  dependabot_config.rs  dependency_features.rs  docs.rs  doctor_fix.rs  downloader_integration.rs  drift.rs  e2e_general.rs  error_envelope.rs  gc.rs  hot_reload.rs  install_scripts.rs  json_output.rs  json_schema.rs  lazy_import.rs  lockfile_roundtrip.rs  mcp.rs  module_finder.rs  observability.rs  package_managers.rs  pep440_conformance.rs  pep440_property.proptest-regressions  pep440_property.rs  profiles.rs  progress_ui.rs  pypi_integration.rs  pypi_shim.rs  (+12 more)
tests/fixtures/: index.json  index_conflict.json  index_cp_tag_mismatch.json  index_missing_hash.json  index_multi_version.json  index_prerelease.json  index_pypi_wheels.json  index_requires_python.json  index_specifiers.json  index_wheels.json  pep440_specifiers.tsv  pep440_specifiers_generated.tsv  pep440_versions.txt
tests/snapshots/compat/: help_add.txt  help_audit.txt  help_build.txt  help_doctor.txt  help_gc.txt  help_install.txt  help_lazy_import.txt  help_lock.txt  help_mcp.txt  help_mcp_serve.txt  help_module_find.txt  help_profile.txt  help_python.txt  help_python_install.txt  help_python_list.txt  help_python_remove.txt  help_python_which.txt  help_remove.txt  help_root.txt  help_run.txt  help_schema.txt  help_schema_check.txt  help_schema_print.txt  help_self.txt  help_self_update.txt  help_telemetry.txt  help_test.txt  help_watch.txt  help_x.txt  json_schema_check.json  json_schema_print.json  json_self_update_dry_run.json
winget/: pybun.yaml
