[package]
name = "pybun"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
serde_json = "1.0"
semver = "1.0"
dirs = "5.0"
toml = "0.8"
tempfile = "3.14"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
