[package]
name = "pybun"
version = "0.1.0"
edition = "2024"

[features]
default = ["performance-allocator"]
# Enable native file watching using the `notify` crate (macOS/Linux)
native-watch = ["notify"]
# Enable high-performance allocators (mimalloc on Windows, jemalloc elsewhere).
performance-allocator = ["mimalloc", "tikv-jemallocator"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
serde_json = "1.0"
semver = "1.0"
dirs = "5.0"
toml = "0.8"
tempfile = "3.14"
uuid = { version = "1.11", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["std"] }
fs2 = "0.4"
# Native file system watcher (optional, for `pybun watch`)
notify = { version = "7.0", optional = true }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.25", features = ["blocking", "json", "rustls-tls", "stream"] }
futures = "0.3.31"
dashmap = "6.1"
mimalloc = { version = "0.1.43", optional = true }
tikv-jemallocator = { version = "0.6.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
httpmock = "0.7"
