[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=68",
    "wheel",
]

[project]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cffi>=1.15,<2",
    "numpy",
    "pandas",
    "scikit-image",
]
description = "PyBun shim bootstrapper for signed releases"
name = "pybun"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"

[[project.authors]]
name = "PyBun Authors"

[project.license]
text = "MIT"

[project.scripts]
pybun = "pybun.cli:main"
pybun-cli = "pybun.cli:main"

[project.urls]
Homepage = "https://github.com/pybun/pybun"
Repository = "https://github.com/pybun/pybun"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["pybun*"]
where = ["."]
