[project]
name = "pybun-bench-large"
version = "0.1.0"
description = "Large benchmark project (100+ packages)"
requires-python = ">=3.9"

dependencies = [
    # === Web Frameworks ===
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "starlette>=0.27.0",
    "flask>=2.3.0",
    "django>=4.2.0",
    "tornado>=6.3.0",
    "sanic>=23.6.0",
    
    # === CLI ===
    "click>=8.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
    
    # === Data Validation ===
    "pydantic>=2.0.0",
    "marshmallow>=3.20.0",
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    
    # === Configuration ===
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
    "dynaconf>=3.2.0",
    
    # === Database ===
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "asyncpg>=0.28.0",
    "aiomysql>=0.2.0",
    "redis>=4.6.0",
    "pymongo>=4.4.0",
    
    # === Task Queue ===
    "celery>=5.3.0",
    "rq>=1.15.0",
    "dramatiq>=1.14.0",
    
    # === AWS ===
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "aiobotocore>=2.5.0",
    
    # === Data Science ===
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    
    # === Image Processing ===
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    
    # === Async ===
    "anyio>=3.7.0",
    "trio>=0.22.0",
    "websockets>=11.0.0",
    "httptools>=0.6.0",
    
    # === Serialization ===
    "orjson>=3.9.0",
    "msgpack>=1.0.0",
    "ujson>=5.8.0",
    "protobuf>=4.23.0",
    
    # === API ===
    "grpcio>=1.56.0",
    "grpcio-tools>=1.56.0",
    "graphql-core>=3.2.0",
    
    # === Testing ===
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",
    "factory-boy>=3.3.0",
    "faker>=19.3.0",
    "freezegun>=1.2.0",
    "responses>=0.23.0",
    "respx>=0.20.0",
    
    # === Linting & Formatting ===
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "pylint>=2.17.0",
    "bandit>=1.7.0",
    
    # === Documentation ===
    "sphinx>=7.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    
    # === Security ===
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.0",
    
    # === Observability ===
    "structlog>=23.1.0",
    "sentry-sdk>=1.28.0",
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.19.0",
    "opentelemetry-sdk>=1.19.0",
    
    # === Utilities ===
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
    "python-dateutil>=2.8.0",
    "arrow>=1.2.0",
    "pendulum>=2.1.0",
    "humanize>=4.7.0",
    "pytz>=2023.3",
    "jinja2>=3.1.0",
    "more-itertools>=10.1.0",
    "toolz>=0.12.0",
]

