[project]
name = "pybun-bench-medium"
version = "0.1.0"
description = "Medium benchmark project (30 packages)"
requires-python = ">=3.9"

dependencies = [
    # Web framework
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "starlette>=0.27.0",
    
    # CLI
    "click>=8.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    
    # Data validation
    "pydantic>=2.0.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    
    # Async
    "anyio>=3.7.0",
    "websockets>=11.0.0",
    
    # Serialization
    "orjson>=3.9.0",
    "msgpack>=1.0.0",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    
    # Linting
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    
    # Utilities
    "tenacity>=8.2.0",
    "structlog>=23.1.0",
]

